Update: Fixed logo alignment, removed rounded corners, standardized formatting

--- a/index.html
+++ b/index.html
@@ -23,12 +23,24 @@
                 <sup>1</sup> <a href="https://www.oulu.fi" target="_blank" style="color: inherit; text-decoration: none; border-bottom: 1px dotted #666;">University of Oulu</a><br>
                 <sup>2</sup> <a href="https://www.unsw.edu.au" target="_blank" style="color: inherit; text-decoration: none; border-bottom: 1px dotted #666;">The University of New South Wales</a>
             </div>
+            <div class="group-link">
+                Research of <a href="https://crowdcomputing.net/" target="_blank">Crowd Computing Oulu</a> <span style="margin: 0 6px; color: #bdc3c7;">&bull;</span> <a href="https://crowdcomputing.net/research" target="_blank">More Projects</a>
+            </div>
         </header>
+        
+        <div class="corner-logos">
+             <a href="https://www.oulu.fi" target="_blank"><img src="images/oulu_logo.png" alt="University of Oulu" class="corner-logo"></a>
+             <a href="https://www.unsw.edu.au" target="_blank"><img src="images/unsw_logo.png" alt="University of New South Wales" class="corner-logo"></a>
+        </div>
 
         <figure>
             <img src="images/comic_horizontal.jpg" alt="Teaser image showing the conversation hand-off concept" class="teaser-img">
             <figcaption>Figure 1: Usage of the conversation hand-off system presented as a storyboard.</figcaption>
         </figure>
+
+        <div class="tldr-box">
+            <strong>TLDR;</strong> We explored if transferring a navigation assistant from a robot to a smartwatch helps. People found it fun and engaging ("teleporting assistant"), but actually preferred just using the watch because it was more efficient.
+        </div>
 
         <section class="abstract">
             <h2>Abstract</h2>
@@ -76,16 +88,6 @@
         <section>
             <h2>Conclusion</h2>
             <p>We found that while the wearable-only system was favored for its convenience, the conversation hand-off was seen as engaging. Flexible triggers for transition and rapid hand-offs are key design considerations for future systems.</p>
-        </section>
-
-        <section>
-            <h2>Citation</h2>
-            <pre>@inproceedings{szabo2026handoff,
-  title={Robot-Wearable Conversation Hand-off for Navigation},
-  author={Szabó, Dániel and Visuri, Aku and Tag, Benjamin and Hosio, Simo},
-  booktitle={The Augmented Humans (AHs) International Conference 2026},
-  year={2026}
-}</pre>
         </section>
 
         <footer>
